# mvn2bzl

./: .bazelrc  .gitignore  BUILD.bazel  LICENSE  README.md  WORKSPACE  repositories.bzl
resources/templates/: BUILD.bazel.ftlh  WORKSPACE.ftlh  maven.bzl.ftlh  repositories.bzl.ftlh  rules.bzl.ftlh
src/mvntobzl/: App.kt  BUILD.bazel  GraphWalker.kt  bazel.kt  resolver.kt  translation.kt
src/mvntobzl/bazel/: BUILD.bazel  View.kt
src/mvntobzl/graph/: BUILD.bazel  Graph.kt  Trie.kt
src/mvntobzl/io/: Workspace.kt
test/mvntobzl/: BUILD.bazel  BazelTestCase.kt  GraphTestCase.kt  ResolverTestCase.kt  TranslationTestCase.kt  WorkspaceTestCase.kt
test/mvntobzl/bazel/: BUILD.bazel  ViewTestCase.kt
test/mvntobzl/graph/: BUILD.bazel  GraphTestCase.kt  TrieTestCase.kt
test/mvntobzl/io/: BUILD.bazel  WorkspaceTestCase.kt
