# vim: set syntax=bzl :

load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_jvm_library", "kt_jvm_binary")

kt_jvm_library(
    name = "lib",
    srcs = glob(["*.kt"]),
    deps = [
        "//src/mvntobzl/bazel:lib",
        "@maven//:commons_cli_commons_cli",
        "@maven//:com_google_code_gson_gson",
        "@maven//:com_google_guava_guava",
        "@maven//:javax_inject_javax_inject",
        "@maven//:org_apache_maven_maven_core",
        "@maven//:org_apache_maven_maven_model",
        "@maven//:org_apache_maven_maven_model_builder",
        "@maven//:org_apache_maven_maven_resolver_provider",
        "@maven//:org_apache_maven_resolver_maven_resolver_api",
        "@maven//:org_apache_maven_resolver_maven_resolver_connector_basic",
        "@maven//:org_apache_maven_resolver_maven_resolver_impl",
        "@maven//:org_apache_maven_resolver_maven_resolver_spi",
        "@maven//:org_apache_maven_resolver_maven_resolver_transport_file",
        "@maven//:org_apache_maven_resolver_maven_resolver_transport_http",
        "@maven//:org_apache_maven_resolver_maven_resolver_util",
        "@maven//:org_eclipse_sisu_org_eclipse_sisu_inject",
        "@maven//:org_freemarker_freemarker",
        "@maven//:org_slf4j_slf4j_api",
        "@maven//:org_slf4j_slf4j_simple",
        "@maven//:org_sonatype_sisu_sisu_guice",
        ],
    visibility = ["//visibility:public"],
)

