# vim: set syntax=bzl :

load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_jvm_test")

kt_jvm_test(
    name = "ViewTestCase",
    srcs = ["ViewTestCase.kt"],
    test_class = "mvntobzl.bazel.ViewTestCase",
    deps = [
        "//src/mvntobzl/bazel:lib",
        "@maven//:junit_junit",
        "@com_github_jetbrains_kotlin//:kotlin-test",
        "@maven//:org_freemarker_freemarker",
    ],
    size = "small",
)